--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dice</title>
+    <!-- Bootstrap Scripts -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,16 +31,19 @@
   <body>
     <!-- Container -->
     <div class="container">
-      <h1>Refresh Me</h1>
-
-      <!-- Dice Divisions -->
-      <div class="dice">
-        <p>PLAYER 1</p>
-        <img class="img1" src="images/dice6.png" alt="Dice-Img" />
-      </div>
-      <div class="dice">
-        <p>Player 2</p>
-        <img class="img2" src="images/dice6.png" alt="Dice-Img" />
+      <div class="row">
+        <div class="col-lg-12">
+          <h1>Refresh Me</h1>
+        </div>
+        <!-- Dice Div -->
+        <div class="col-md-3 dice-left">
+          <p>Player 1</p>
+          <img class="img1" src="images/dice6.png" alt="Dice-Img" />
+        </div>
+        <div class="col-md-3 dice-right">
+          <p>Player 2</p>
+          <img class="img2" src="images/dice6.png" alt="Dice-Img" />
+        </div>
       </div>
     </div>
 
@@ -35,10 +51,12 @@
     <script src="index.js"></script>
   </body>
   <footer>
-    🎲
-    <a class="footer-link" href="http://www.github.com/VeerniVishwanath"
-      >Vishwanath Veerni</a
-    >
-    🎲
+    <p class="footer-p">
+      🎲
+      <a class="footer-link" href="http://www.github.com/VeerniVishwanath"
+        >VISHWANATH VEERNI</a
+      >
+      🎲
+    </p>
   </footer>
 </html>
